Fix css alignment when using other languages other than English

--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -123,8 +123,8 @@ margin-left: 0;
 .navbar-default .navbar-nav>li>a {
   color: #fff;
   font-family: 'proxima-bold', sans-serif;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 13px;
+  padding-right: 13px;
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus {
